Do not modify input packetChain in IcmpDecoder
The input should be expected to be immutable, make sure we copy it
accordingly.

Change-Id: Iafd58cd8ac7d23a6189b14cab60edcff4f7d3449
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>